// SPDX-License-Identifier: Apache-2.0
// Licensed to the Ed-Fi Alliance under one or more agreements.
// The Ed-Fi Alliance licenses this file to you under the Apache License, Version 2.0.
// See the LICENSE and NOTICES files in the project root for more information.

namespace EdFi.Ods.Common.Security
{
    /// <summary>
    /// Defines methods for getting and setting the contextual details for the caller's API key.
    /// </summary>
    public interface IApiKeyContextProvider
    {
        /// <summary>
        /// Gets the details of the API key currently in context.
        /// </summary>
        /// <returns>An <see cref="ApiKeyContext"/> instance.</returns>
        ApiKeyContext GetApiKeyContext();

        /// <summary>
        /// Sets the details of the API key into context.
        /// </summary>
        /// <param name="apiKeyContext">The <see cref="ApiKeyContext"/> instance to be stored.</param>
        void SetApiKeyContext(ApiKeyContext apiKeyContext);
    }
   
}
